# bowler-analysis

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
docs/: running-batter-analysis.md
scripts/: extract_shots.py  make_ball_dataset.py  make_synthetic.py  segment_shots.py  train_ball.py
src/bowler_analysis/: __init__.py  cli.py  config.py  pipeline.py
src/bowler_analysis/analysis/: audio_contact.py  bounce.py  line_length.py  segment.py  shot_llm.py  speed.py  swing.py
src/bowler_analysis/calibrate/: manual.py
src/bowler_analysis/geometry/: calibration.py  pitch_model.py  projection.py
src/bowler_analysis/ingest/: video_reader.py
src/bowler_analysis/llm/: __init__.py  client.py
src/bowler_analysis/models/: batter_schemas.py  schemas.py
src/bowler_analysis/render/: batter_report.py  overlay.py  pitchmap.py  report.py
src/bowler_analysis/tracking/: detector_classical.py  detector_yolo.py  tracker.py  trajectory.py
tests/: test_geometry.py  test_speed.py
